# mlops

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: github_actions.yml
airflow/dags/: my_custom_dag.py  retail_prediction.py  retail_sales.py  retail_sales_forecast.py  video_reviews.py
airflow/plugins/: config.py  my_airflow_plugin.py  video_config.py
airflow/plugins/hooks/: my_airflow_hook.py
airflow/plugins/libs/: project_config.py  sagemaker_libs.py
airflow/plugins/operators/: hello_operator.py  my_airflow_operator.py
airflow/plugins/processing/: video_reviews_prepare.py  video_reviews_preprocess.py
airflow/plugins/sensors/: my_airflow_sensor.py  s3_key_size.py
sagemake_jobs/: preprocessing.py  sklearn_process.py  train_boston_housing.py  tune_boston_housing.py
sagemake_jobs/boston_housing/: train.py
sagemaker_jobs/: train_boston_housing.py  train_retail_sales.py  tune_boston_housing.py  tune_retail_sales.py
sagemaker_jobs/boston_housing/: train_boston_housing.py  tune_boston_housing.py
sagemaker_jobs/boston_housing/source_dir/: boston_train.py
sagemaker_jobs/retail_sales/: preprocess.py  retail_train.py  train_retail_sales.py  tune_retail_sales.py
sagemaker_jobs/retail_sales/source_dir/: retail_train.py
